business and DB access complete, start gui